--- a/#source/style.scss
+++ b/#source/style.scss
@@ -1,1 +1,221 @@
+@charset "UTF-8";
+/*Обнуление*/
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+
+/*--------------------*/
+
+$Roboto: "Roboto";
+$Montserrat: "Montserrat";
+$Merriweather: "Merriweather";
+
+.container {
+  max-width: 1170px;
+  margin: auto;
+  position: relative;
+}
+.header {
+  font-family: $Roboto;
+  font-size: 13px;
+  letter-spacing: 0.52px;
+  text-align: center;
+  color: #989696;
+  &__inner {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+  }
+  &__burger {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    position: relative;
+  }
+  &__burger-ul {
+    transform: translateX(999px);
+    transition: 0.5s;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    height: calc(100vh - 55px);
+    right: 0;
+    top: 55px;
+    text-align: right;
+    background-color: #fff;
+    z-index: 10;
+    font-size: 25px;
+    border-left: 3px solid #898888;
+    position: fixed;
+    padding-bottom: 50px;
+    .header__li {
+      margin: 0 15px;
+      padding-right: 10px;
+      position: relative;
+      &:before {
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 2px;
+        right: -10px;
+        background-color: #898888;
+      }
+      &:hover::before {
+        left: -10px;
+      }
+    }
+    hr {
+      width: 100%;
+      height: 2px;
+      background-color: #898888;
+    }
+    .contact-li {
+      font-size: 16px;
+    }
+  }
+  .active-burger {
+    transform: translateX(0);
+  }
+  &__burger-icon {
+    font-size: 40px;
+    cursor: pointer;
+  }
+  &__ul {
+    display: flex;
+    gap: 45px;
+    align-items: center;
+  }
+
+  &__li {
+    cursor: pointer;
+    &:hover {
+      color: #010101;
+    }
+  }
+}
+.main-block {
+  height: 890px;
+  padding-top: 298px;
+  &__title {
+    font-family: Roboto;
+    font-size: 44px;
+    letter-spacing: 0.88px;
+    text-align: center;
+    color: #1d1e1f;
+    font-weight: 300;
+  }
+
+  &__subtitle {
+    font-family: Merriweather;
+    font-size: 16px;
+    font-weight: 300;
+    font-style: italic;
+    letter-spacing: 0.48px;
+    text-align: center;
+    color: #898888;
+    margin-top: 5px;
+  }
+
+  &__button {
+    display: block;
+    font-family: Montserrat;
+    font-size: 13px;
+    letter-spacing: 0.52px;
+    text-align: center;
+    color: #000;
+    padding: 25px 51px 23px 52px;
+    background-color: transparent;
+    border: 1px solid #000;
+    margin: auto;
+    margin-top: 43px;
+  }
+}
+
+@import "_media";
