--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,294 @@
-/* No CSS */
+@charset "UTF-8";
+/*Обнуление*/
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+
+/*--------------------*/
+.container {
+  max-width: 1170px;
+  margin: auto;
+  position: relative;
+}
+
+.header {
+  font-family: "Roboto";
+  font-size: 13px;
+  letter-spacing: 0.52px;
+  text-align: center;
+  color: #989696;
+}
+
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 60px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__burger {
+  display: none;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80px;
+  position: relative;
+}
+
+.header__burger-ul {
+  -webkit-transform: translateX(999px);
+          transform: translateX(999px);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: calc(100vh - 55px);
+  right: 0;
+  top: 55px;
+  text-align: right;
+  background-color: #fff;
+  z-index: 10;
+  font-size: 25px;
+  border-left: 3px solid #898888;
+  position: fixed;
+  padding-bottom: 50px;
+}
+
+.header__burger-ul .header__li {
+  margin: 0 15px;
+  padding-right: 10px;
+  position: relative;
+}
+
+.header__burger-ul .header__li:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 2px;
+  right: -10px;
+  background-color: #898888;
+}
+
+.header__burger-ul .header__li:hover::before {
+  left: -10px;
+}
+
+.header__burger-ul hr {
+  width: 100%;
+  height: 2px;
+  background-color: #898888;
+}
+
+.header__burger-ul .contact-li {
+  font-size: 16px;
+}
+
+.header .active-burger {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.header__burger-icon {
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.header__ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 45px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__li {
+  cursor: pointer;
+}
+
+.header__li:hover {
+  color: #010101;
+}
+
+.main-block {
+  height: 890px;
+  padding-top: 298px;
+}
+
+.main-block__title {
+  font-family: Roboto;
+  font-size: 44px;
+  letter-spacing: 0.88px;
+  text-align: center;
+  color: #1d1e1f;
+  font-weight: 300;
+}
+
+.main-block__subtitle {
+  font-family: Merriweather;
+  font-size: 16px;
+  font-weight: 300;
+  font-style: italic;
+  letter-spacing: 0.48px;
+  text-align: center;
+  color: #898888;
+  margin-top: 5px;
+}
+
+.main-block__button {
+  display: block;
+  font-family: Montserrat;
+  font-size: 13px;
+  letter-spacing: 0.52px;
+  text-align: center;
+  color: #000;
+  padding: 25px 51px 23px 52px;
+  background-color: transparent;
+  border: 1px solid #000;
+  margin: auto;
+  margin-top: 43px;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 100%;
+    padding: 0 25px;
+  }
+}
+
+@media (max-width: 700px) {
+  .header__inner {
+    display: none;
+  }
+  .header__burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media (max-width: 525px) {
+  .main-block {
+    height: calc(100vh - 80px);
+    padding-top: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .main-block__title {
+    font-size: 30px;
+    line-height: 120%;
+  }
+  .main-block__subtitle {
+    line-height: 120%;
+    margin-top: 20px;
+  }
+}
