team-block done

--- a/#source/_media.scss
+++ b/#source/_media.scss
@@ -12,6 +12,47 @@
   .header__burger {
     display: flex;
   }
+  .date-block {
+    min-height: auto;
+    padding-bottom: 200px;
+    img {
+      width: 200%;
+      right: -42.5%;
+    }
+    .date-block__container-main {
+      display: none;
+    }
+    .date-block__container-small {
+      min-height: auto;
+      display: flex;
+    }
+  }
+  .team-block {
+    min-height: 757px;
+    padding-top: 121px;
+    &__inner {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 100px;
+      padding: 100px 0;
+    }
+
+    &__persone {
+      width: 400px;
+      &:nth-child(2) {
+        margin-top: 0px;
+      }
+      &:nth-child(1),
+      &:nth-child(3) {
+        margin-top: 0px;
+      }
+      .team-block__img {
+        float: left;
+      }
+    }
+  }
 }
 @media (max-width: 525px) {
   .main-block {
@@ -29,6 +70,31 @@
     &__subtitle {
       line-height: 120%;
       margin-top: 20px;
+    }
+  }
+}
+@media (max-width: 450px) {
+  .date-block {
+    .date-block__container-small {
+      padding-left: 25px;
+      padding-right: 25px;
+      .date-block__small {
+        display: flex;
+        max-width: 100%;
+        .date-block__small-text {
+          font-size: 12px;
+          max-width: 350px;
+        }
+      }
+    }
+  }
+  .team-block {
+    padding-top: 50px;
+    &__persone {
+      width: 200px;
+      .team-block__img {
+        float: none;
+      }
     }
   }
 }
