--- a/#source/style.scss
+++ b/#source/style.scss
@@ -40,6 +40,7 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: #fff;
 }
 
 input,
@@ -99,6 +100,23 @@ $Merriweather: "Merriweather";
   margin: auto;
   position: relative;
 }
+.title {
+  font-family: Roboto;
+  font-size: 34px;
+  letter-spacing: 0.68px;
+  text-align: center;
+  color: #1d1e1f;
+}
+.subtitle {
+  font-family: Merriweather;
+  font-size: 16px;
+  font-weight: 300;
+  font-style: italic;
+  letter-spacing: 0.32px;
+  text-align: center;
+  color: #898888;
+  margin-top: 13px;
+}
 .header {
   font-family: $Roboto;
   font-size: 13px;
@@ -117,7 +135,13 @@ $Merriweather: "Merriweather";
     height: 80px;
     position: relative;
   }
+  &__burger-close {
+    font-size: 40px;
+    // padding-right: 20px;
+    border-bottom: 2px solid #898888;
+  }
   &__burger-ul {
+    padding-right: 20px;
     transform: translateX(999px);
     transition: 0.5s;
     position: absolute;
@@ -125,9 +149,9 @@ $Merriweather: "Merriweather";
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-around;
-    height: calc(100vh - 55px);
+    height: 100vh;
     right: 0;
-    top: 55px;
+    top: 0px;
     text-align: right;
     background-color: #fff;
     z-index: 10;
@@ -152,7 +176,8 @@ $Merriweather: "Merriweather";
       }
     }
     hr {
-      width: 100%;
+      width: 120%;
+      margin-right: -20%;
       height: 2px;
       background-color: #898888;
     }
@@ -217,5 +242,276 @@ $Merriweather: "Merriweather";
     margin-top: 43px;
   }
 }
+.date-block {
+  min-height: 1332px;
+  background-color: #1d1d1d;
+  position: relative;
+  overflow-y: hidden;
+  .container {
+    display: flex;
+    min-height: 1332px;
+  }
+  .date-block__container-small {
+    display: none;
+    flex-direction: column;
+    gap: 100px;
+    padding: 100px 70px 0 70px;
+    .date-block__small {
+      display: flex;
+      max-width: 100%;
+      .date-block__small-text {
+        max-width: 350px;
+      }
+      &:nth-child(1) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      &:nth-child(2) {
+        flex-direction: column;
+        align-items: flex-end;
+        .date-block__small-text {
+          text-align: right;
+        }
+      }
+      &:nth-child(3) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      &:nth-child(4) {
+        flex-direction: column;
+        align-items: flex-end;
+        .date-block__small-text {
+          text-align: right;
+        }
+      }
+    }
+  }
+  &__left {
+    width: 50%;
+    min-height: 1332px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-top: 151px;
+    gap: 255px;
+    padding-right: 80px;
+    .date-block__small {
+      .date-block__small-title {
+        text-align: right;
+      }
+    }
+  }
+  &__center {
+    min-height: 1332px;
+    width: 5px;
+    background-color: #fff;
+    position: relative;
+  }
+  &__circle {
+    position: absolute;
+    background-color: #1d1d1d;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    width: 24px;
+    height: 24px;
+    left: -9.5px;
+    &:nth-child(1) {
+      top: 151px;
+    }
+    &:nth-child(2) {
+      top: 272px;
+    }
+    &:nth-child(3) {
+      width: 46px;
+      height: 46px;
+      left: -21.5px;
+      top: 490px;
+    }
+    &:nth-child(4) {
+      top: 746px;
+    }
+  }
+  &__right {
+    width: 50%;
+    min-height: 1332px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 272px;
+    gap: 353px;
+    padding-left: 75px;
+    &__small {
+      text-align: left;
+    }
+  }
+  &__small {
+    max-width: 410px;
+  }
 
+  &__small-title {
+    font-family: Roboto;
+    font-size: 48px;
+    line-height: 0.54;
+    letter-spacing: 0.96px;
+    text-align: left;
+    color: #fefefe;
+  }
+
+  &__small-text {
+    font-family: Montserrat;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 1.47;
+    letter-spacing: 0.3px;
+    text-align: left;
+    color: #b7b7b7;
+    margin-top: 27px;
+  }
+
+  img {
+    position: absolute;
+    bottom: -3px;
+    right: 0;
+    width: 108%;
+    z-index: 2;
+  }
+}
+.team-block {
+  min-height: 757px;
+  padding-top: 82px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__persone {
+    width: 200px;
+    &:nth-child(2) {
+      margin-top: 124px;
+    }
+    &:nth-child(1),
+    &:nth-child(3) {
+      margin-top: 215px;
+    }
+  }
+
+  &__img {
+    text-align: center;
+    img {
+      filter: grayscale(100%);
+    }
+  }
+
+  &__name {
+    font-family: Roboto;
+    font-size: 24px;
+    line-height: 1.08;
+    letter-spacing: 0.48px;
+    text-align: center;
+    color: #464646;
+    margin-top: 29px;
+  }
+
+  &__position {
+    font-family: Roboto;
+    font-size: 13px;
+    line-height: 2;
+    letter-spacing: 0.26px;
+    text-align: center;
+    color: #b3b3b3;
+    margin-top: 7px;
+  }
+
+  &__social-media {
+    margin-top: 21px;
+    display: flex;
+    justify-content: center;
+    gap: 14px;
+  }
+}
+.provide-block {
+  min-height: 1461px;
+  background-color: #181818;
+  transform: skewY(-7deg);
+  margin-top: 102px;
+  padding-top: 130px;
+  overflow: hidden;
+  .container {
+    transform: skewY(7deg);
+  }
+  .title {
+    color: #fff;
+  }
+  .subtitle {
+    color: #777777;
+  }
+
+  &__inner {
+    margin-top: 218px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__small {
+    width: 335px;
+  }
+
+  &__small-img {
+    text-align: center;
+  }
+
+  &__small-name {
+    font-family: Roboto;
+    font-size: 26px;
+    letter-spacing: 0.52px;
+    text-align: center;
+    color: #fff;
+    margin-top: 43px;
+  }
+
+  &__small-text {
+    font-family: Roboto;
+    font-size: 18px;
+    line-height: 1.28;
+    letter-spacing: 0.36px;
+    text-align: center;
+    color: #383838;
+    margin-top: 31px;
+  }
+  &__button {
+    display: block;
+    padding: 26px 43px;
+    font-family: Roboto;
+    font-size: 16px;
+    letter-spacing: 0.32px;
+    text-align: center;
+    color: #000;
+    background-color: #fff;
+    margin: auto;
+    margin-top: 477px;
+    position: relative;
+  }
+  &__back-img {
+    position: absolute;
+    right: 0;
+    top: 700px;
+    z-index: 0;
+    opacity: 0.43;
+    -moz-user-select: none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: linear-gradient(#181818de 10%, rgba(255, 255, 255, 0) 60%);
+      top: 0;
+      left: 0;
+    }
+  }
+}
 @import "_media";
