--- a/#source/_media.scss
+++ b/#source/_media.scss
@@ -1,8 +1,51 @@
 // Container
 @media (max-width: 1200px) {
   .container {
-    width: 100%;
     padding: 0 25px;
+  }
+  .provide-block {
+    &__back-img {
+      width: 100%;
+      bottom: 0;
+      img {
+        width: 100%;
+        bottom: 0;
+      }
+      &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: linear-gradient(#181818de 10%, rgba(255, 255, 255, 0) 60%);
+        top: 0;
+        left: 0;
+      }
+    }
+  }
+}
+@media (max-width: 1170px) {
+  .container {
+    width: 100%;
+  }
+}
+@media (max-width: 1095px) {
+  .provide-block {
+    padding-bottom: 100px;
+
+    &__inner {
+      justify-content: center;
+      gap: 50px;
+    }
+    &__button {
+      margin-top: 100px;
+    }
+  }
+}
+@media (max-width: 770px) {
+  .provide-block {
+    &__back-img {
+      display: none;
+    }
   }
 }
 @media (max-width: 700px) {
@@ -95,6 +138,20 @@
       .team-block__img {
         float: none;
       }
+    }
+  }
+  .title {
+    font-size: 25px;
+  }
+  .subtitle {
+    font-size: 14px;
+  }
+  .provide-block {
+    padding-top: 70px;
+    &__inner {
+      margin-top: 70px;
+      justify-content: center;
+      gap: 50px;
     }
   }
 }
