--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ h6 {
   min-height: 1332px;
   background-color: #1d1d1d;
   position: relative;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .date-block .container {
@@ -563,6 +563,7 @@ h6 {
 }
 
 .provide-block__inner {
+  position: relative;
   margin-top: 218px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -570,6 +571,9 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
 }
 
 .provide-block__small {
@@ -639,8 +643,52 @@ h6 {
 
 @media (max-width: 1200px) {
   .container {
-    width: 100%;
     padding: 0 25px;
+  }
+  .provide-block__back-img {
+    width: 100%;
+    bottom: 0;
+  }
+  .provide-block__back-img img {
+    width: 100%;
+    bottom: 0;
+  }
+  .provide-block__back-img::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #181818de), color-stop(60%, rgba(255, 255, 255, 0)));
+    background: linear-gradient(#181818de 10%, rgba(255, 255, 255, 0) 60%);
+    top: 0;
+    left: 0;
+  }
+}
+
+@media (max-width: 1170px) {
+  .container {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1095px) {
+  .provide-block {
+    padding-bottom: 100px;
+  }
+  .provide-block__inner {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 50px;
+  }
+  .provide-block__button {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 770px) {
+  .provide-block__back-img {
+    display: none;
   }
 }
 
@@ -750,5 +798,21 @@ h6 {
   }
   .team-block__persone .team-block__img {
     float: none;
+  }
+  .title {
+    font-size: 25px;
+  }
+  .subtitle {
+    font-size: 14px;
+  }
+  .provide-block {
+    padding-top: 70px;
+  }
+  .provide-block__inner {
+    margin-top: 70px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 50px;
   }
 }
