--- a/#source/style.scss
+++ b/#source/style.scss
@@ -517,4 +517,83 @@ $Merriweather: "Merriweather";
     }
   }
 }
+.contact-block {
+  padding-top: 298px;
+  height: 1093px;
+  &__img {
+    margin-top: 72px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  &__img-small {
+    width: 130px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    img {
+    }
+    span {
+      font-family: Roboto;
+      font-size: 12px;
+      letter-spacing: 0.24px;
+      text-align: center;
+      color: #898888;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: max-content;
+    width: 770px;
+    margin: auto;
+    margin-top: 153px;
+  }
+
+  &__input,
+  &__textarea {
+    width: 770px;
+    max-width: 770px;
+    height: 52px;
+    border: solid 1px #999;
+    font-family: Roboto;
+    font-size: 15px;
+    letter-spacing: 0.3px;
+    text-align: center;
+    color: #898888;
+  }
+  &__textarea {
+    resize: initial;
+    width: 100%;
+    height: 195px;
+  }
+  &__btn {
+    width: 100%;
+    max-width: 770px;
+    height: 52px;
+    background-color: #161616;
+    font-family: Roboto;
+    font-size: 17px;
+    line-height: 1.53;
+    letter-spacing: 0.34px;
+    text-align: center;
+    color: #fefefe;
+  }
+}
+.footer {
+  height: 439px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.28px;
+  text-align: center;
+  color: #3b3b3b;
+}
+
 @import "_media";
