--- a/css/style.css
+++ b/css/style.css
@@ -641,6 +641,110 @@ h6 {
   left: 0;
 }
 
+.contact-block {
+  padding-top: 298px;
+  height: 1093px;
+}
+
+.contact-block__img {
+  margin-top: 72px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.contact-block__img-small {
+  width: 130px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 12px;
+}
+
+.contact-block__img-small span {
+  font-family: Roboto;
+  font-size: 12px;
+  letter-spacing: 0.24px;
+  text-align: center;
+  color: #898888;
+}
+
+.contact-block__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  width: 770px;
+  margin: auto;
+  margin-top: 153px;
+}
+
+.contact-block__input, .contact-block__textarea {
+  width: 770px;
+  max-width: 770px;
+  height: 52px;
+  border: solid 1px #999;
+  font-family: Roboto;
+  font-size: 15px;
+  letter-spacing: 0.3px;
+  text-align: center;
+  color: #898888;
+}
+
+.contact-block__textarea {
+  resize: initial;
+  width: 100%;
+  height: 195px;
+}
+
+.contact-block__btn {
+  width: 100%;
+  max-width: 770px;
+  height: 52px;
+  background-color: #161616;
+  font-family: Roboto;
+  font-size: 17px;
+  line-height: 1.53;
+  letter-spacing: 0.34px;
+  text-align: center;
+  color: #fefefe;
+}
+
+.footer {
+  height: 439px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.28px;
+  text-align: center;
+  color: #3b3b3b;
+}
+
 @media (max-width: 1200px) {
   .container {
     padding: 0 25px;
