--- a/#source/_media.scss
+++ b/#source/_media.scss
@@ -41,6 +41,44 @@
     }
   }
 }
+@media (max-width: 820px) {
+  .contact-block {
+    height: auto;
+    &__form {
+      width: 100%;
+      min-width: 100%;
+      margin-top: 50px;
+    }
+
+    &__input,
+    &__textarea {
+      min-width: 100%;
+      width: 100%;
+    }
+    &__img {
+      justify-content: center;
+      gap: 50px;
+      flex-wrap: wrap;
+    }
+
+    &__img-small {
+      width: 130px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+      img {
+      }
+      span {
+        font-family: Roboto;
+        font-size: 12px;
+        letter-spacing: 0.24px;
+        text-align: center;
+        color: #898888;
+      }
+    }
+  }
+}
 @media (max-width: 770px) {
   .provide-block {
     &__back-img {
@@ -58,6 +96,7 @@
   .date-block {
     min-height: auto;
     padding-bottom: 200px;
+    padding-top: 100px;
     img {
       width: 200%;
       right: -42.5%;
@@ -68,6 +107,9 @@
     .date-block__container-small {
       min-height: auto;
       display: flex;
+    }
+    &__top-img {
+      display: block;
     }
   }
   .team-block {
@@ -114,6 +156,12 @@
       line-height: 120%;
       margin-top: 20px;
     }
+  }
+  .contact-block {
+    padding-top: 70px;
+  }
+  .footer {
+    height: 200px;
   }
 }
 @media (max-width: 450px) {
