--- a/#source/style.scss
+++ b/#source/style.scss
@@ -375,6 +375,11 @@ $Merriweather: "Merriweather";
     width: 108%;
     z-index: 2;
   }
+  &__top-img {
+    display: none;
+    top: 0;
+    transform: rotateX(180deg);
+  }
 }
 .team-block {
   min-height: 757px;
