--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,13 @@ h6 {
   z-index: 2;
 }
 
+.date-block__top-img {
+  display: none;
+  top: 0;
+  -webkit-transform: rotateX(180deg);
+          transform: rotateX(180deg);
+}
+
 .team-block {
   min-height: 757px;
   padding-top: 82px;
@@ -790,6 +797,50 @@ h6 {
   }
 }
 
+@media (max-width: 820px) {
+  .contact-block {
+    height: auto;
+  }
+  .contact-block__form {
+    width: 100%;
+    min-width: 100%;
+    margin-top: 50px;
+  }
+  .contact-block__input, .contact-block__textarea {
+    min-width: 100%;
+    width: 100%;
+  }
+  .contact-block__img {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 50px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .contact-block__img-small {
+    width: 130px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 12px;
+  }
+  .contact-block__img-small span {
+    font-family: Roboto;
+    font-size: 12px;
+    letter-spacing: 0.24px;
+    text-align: center;
+    color: #898888;
+  }
+}
+
 @media (max-width: 770px) {
   .provide-block__back-img {
     display: none;
@@ -808,6 +859,7 @@ h6 {
   .date-block {
     min-height: auto;
     padding-bottom: 200px;
+    padding-top: 100px;
   }
   .date-block img {
     width: 200%;
@@ -821,6 +873,9 @@ h6 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  .date-block__top-img {
+    display: block;
   }
   .team-block {
     min-height: 757px;
@@ -876,6 +931,12 @@ h6 {
   .main-block__subtitle {
     line-height: 120%;
     margin-top: 20px;
+  }
+  .contact-block {
+    padding-top: 70px;
+  }
+  .footer {
+    height: 200px;
   }
 }
 
