--- a/#source/style.scss
+++ b/#source/style.scss
@@ -377,7 +377,7 @@ $Merriweather: "Merriweather";
   }
   &__top-img {
     display: none;
-    top: 0;
+    top: -2px;
     transform: rotateX(180deg);
   }
 }
