--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ h6 {
 
 .date-block__top-img {
   display: none;
-  top: 0;
+  top: -2px;
   -webkit-transform: rotateX(180deg);
           transform: rotateX(180deg);
 }
