--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   background-color: #fff;
+  scroll-behavior: smooth;
 }
 
 input,
@@ -251,6 +252,10 @@ h6 {
   text-align: center;
   color: #1d1e1f;
   font-weight: 300;
+  -webkit-animation: main-block-text-anim 1s ease-in-out;
+          animation: main-block-text-anim 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .main-block__subtitle {
@@ -262,6 +267,10 @@ h6 {
   text-align: center;
   color: #898888;
   margin-top: 5px;
+  -webkit-animation: main-block-text-anim 1s ease-in-out;
+          animation: main-block-text-anim 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .main-block__button {
@@ -276,6 +285,10 @@ h6 {
   border: 1px solid #000;
   margin: auto;
   margin-top: 43px;
+  -webkit-animation: main-block-text-anim 1.5s ease-in-out;
+          animation: main-block-text-anim 1.5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .date-block {
@@ -290,6 +303,22 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   min-height: 1332px;
+}
+
+.date-block .container .date-block__left .date-block__small {
+  -webkit-transform: translateX(-500px);
+          transform: translateX(-500px);
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.date-block .container .date-block__right .date-block__small {
+  -webkit-transform: translateX(500px);
+          transform: translateX(500px);
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .date-block .date-block__container-small {
@@ -307,6 +336,8 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   max-width: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .date-block .date-block__container-small .date-block__small .date-block__small-text {
@@ -314,6 +345,8 @@ h6 {
 }
 
 .date-block .date-block__container-small .date-block__small:nth-child(1) {
+  -webkit-transform: translate(500px);
+          transform: translate(500px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -324,6 +357,8 @@ h6 {
 }
 
 .date-block .date-block__container-small .date-block__small:nth-child(2) {
+  -webkit-transform: translate(-500px);
+          transform: translate(-500px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -338,6 +373,8 @@ h6 {
 }
 
 .date-block .date-block__container-small .date-block__small:nth-child(3) {
+  -webkit-transform: translate(500px);
+          transform: translate(500px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -348,6 +385,8 @@ h6 {
 }
 
 .date-block .date-block__container-small .date-block__small:nth-child(4) {
+  -webkit-transform: translate(-500px);
+          transform: translate(-500px);
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -496,6 +535,11 @@ h6 {
 
 .team-block__persone {
   width: 200px;
+  -webkit-transform: translateY(200px);
+          transform: translateY(200px);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0;
 }
 
 .team-block__persone:nth-child(2) {
@@ -675,6 +719,11 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
   gap: 12px;
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .contact-block__img-small span {
@@ -697,7 +746,10 @@ h6 {
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
-  width: 770px;
+  width: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0;
   margin: auto;
   margin-top: 153px;
 }
@@ -714,7 +766,13 @@ h6 {
   color: #898888;
 }
 
+.contact-block__input:focus, .contact-block__textarea:focus {
+  -webkit-box-shadow: 0 0 1px 1px #888;
+          box-shadow: 0 0 1px 1px #888;
+}
+
 .contact-block__textarea {
+  padding-top: 20px;
   resize: initial;
   width: 100%;
   height: 195px;
@@ -750,6 +808,45 @@ h6 {
   letter-spacing: 0.28px;
   text-align: center;
   color: #3b3b3b;
+}
+
+.up-btn {
+  -webkit-transform: translateX(999px);
+          transform: translateX(999px);
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  font-size: 50px;
+  cursor: pointer;
+  color: #898888;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+@-webkit-keyframes main-block-text-anim {
+  0% {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes main-block-text-anim {
+  0% {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 @media (max-width: 1200px) {
