--- a/#source/_media.scss
+++ b/#source/_media.scss
@@ -40,6 +40,35 @@
       margin-top: 100px;
     }
   }
+  .read-more-main {
+    &__back {
+      clip-path: polygon(45% 0, 200% 0, 200% 200%, 0 200%, 0 45%);
+    }
+    &__line {
+      clip-path: polygon(45% 0, 44% 0, 0 44%, 0 45%);
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .read-more-main {
+    &__back {
+      clip-path: polygon(35% 0, 200% 0, 200% 200%, 0 200%, 0 15%);
+    }
+    &__line {
+      clip-path: polygon(35% 0, 34% 0, 0 14%, 0 15%);
+    }
+    &__list {
+      width: 100%;
+      max-width: 100%;
+    }
+    &__close {
+      padding-top: 2%;
+      padding-left: 2%;
+      font-size: 10vw;
+      opacity: 1;
+    }
+  }
 }
 @media (max-width: 820px) {
   .contact-block {
