--- a/#source/style.scss
+++ b/#source/style.scss
@@ -285,12 +285,12 @@ $Merriweather: "Merriweather";
         max-width: 350px;
       }
       &:nth-child(1) {
-        transform: translate(500px);
+        transform: translate(200%);
         flex-direction: column;
         align-items: flex-start;
       }
       &:nth-child(2) {
-        transform: translate(-500px);
+        transform: translate(-200%);
         flex-direction: column;
         align-items: flex-end;
         .date-block__small-text {
@@ -298,12 +298,12 @@ $Merriweather: "Merriweather";
         }
       }
       &:nth-child(3) {
-        transform: translate(500px);
+        transform: translate(200%);
         flex-direction: column;
         align-items: flex-start;
       }
       &:nth-child(4) {
-        transform: translate(-500px);
+        transform: translate(-200%);
         flex-direction: column;
         align-items: flex-end;
         .date-block__small-text {
@@ -583,6 +583,7 @@ $Merriweather: "Merriweather";
   &__form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
     max-width: max-content;
     width: 0;
@@ -594,7 +595,8 @@ $Merriweather: "Merriweather";
 
   &__input,
   &__textarea {
-    width: 770px;
+    display: block;
+    width: 100%;
     max-width: 770px;
     height: 52px;
     border: solid 1px #999;
@@ -627,6 +629,7 @@ $Merriweather: "Merriweather";
   }
 }
 .footer {
+  width: 100%;
   height: 439px;
   display: flex;
   align-items: center;
@@ -647,6 +650,158 @@ $Merriweather: "Merriweather";
   cursor: pointer;
   color: #898888;
   transition: 0.5s;
+}
+.read-more-main {
+  transform: translateX(200%);
+  transition: 0.5s;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+  top: 0;
+  left: 0;
+  background: linear-gradient(-90deg, #000 50%, rgba(0, 0, 0, 0.5) 100%);
+
+  &__back {
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(65% 0, 200% 0, 200% 200%, 0 200%, 0 65%);
+    background-color: rgb(46, 46, 46);
+    position: relative;
+    top: 0;
+    right: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding-bottom: 50px;
+  }
+  &__close {
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(0 0, 0 100%, 100% 0);
+    position: fixed;
+    top: 0;
+    text-transform: capitalize;
+    font-size: 13vw;
+    letter-spacing: 2px;
+    font-family: Roboto;
+    font-weight: 600;
+    color: #fff;
+    opacity: 0.2;
+    cursor: pointer;
+    padding-top: 5%;
+    padding-left: 5%;
+  }
+  &__line {
+    transform: translate(0);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(66% 0, 65% 0, 0 65%, 0 66%);
+    background-color: rgb(255, 255, 255);
+    opacity: 0.9;
+    z-index: 5;
+  }
+  .container {
+    padding-top: 120px;
+    padding-right: 50px;
+    float: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .title {
+    color: #fff;
+  }
+  &__list {
+    margin-top: 50px;
+    max-width: 600px;
+    width: 600px;
+  }
+  &__list-title {
+    font-family: Roboto;
+    color: #fff;
+    font-weight: 600;
+    font-size: 30px;
+  }
+
+  &__list-small {
+    width: 100%;
+    height: auto;
+    min-height: 50px;
+    // background-color: red;
+    border-radius: 5px;
+    margin-top: 15px;
+    border: 2px solid #999;
+    background-color: #777;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  &__small-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: Montserrat;
+    font-size: 20px;
+    color: #fff;
+    height: 50px;
+    ion-icon {
+      font-size: 30px;
+      cursor: pointer;
+    }
+  }
+  &__inner {
+    font-family: Montserrat;
+    display: none;
+    width: 100%;
+    font-size: 20px;
+    max-width: 100%;
+    padding-bottom: 15px;
+    text-align: justify;
+  }
+  .active-step {
+    display: block;
+  }
+  .active-step-arrow {
+    transform: rotate(180deg);
+  }
+  &__text {
+    color: #fff;
+    position: relative;
+    font-family: $Merriweather;
+    font-weight: 600;
+    font-size: 25px;
+    max-width: 100%;
+    width: 100%;
+    text-align: justify;
+    line-height: 135%;
+    margin-top: 50px;
+  }
+  &__img {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    img {
+      width: 300px;
+      height: 300px;
+      max-width: 300px;
+      max-height: 300px;
+      position: relative;
+      display: block;
+    }
+    // background-color: red;
+    padding: 15px;
+  }
+  .img-title {
+    margin: 70px 0;
+    font-size: 50px;
+  }
 }
 @keyframes main-block-text-anim {
   0% {
