--- a/#source/style.scss
+++ b/#source/style.scss
@@ -417,9 +417,11 @@ $Merriweather: "Merriweather";
 
   &__persone {
     width: 200px;
+    height: 350px;
     transform: translateY(200px);
     transition: 0.5s;
     opacity: 0;
+
     &:nth-child(2) {
       margin-top: 124px;
     }
@@ -428,11 +430,59 @@ $Merriweather: "Merriweather";
       margin-top: 215px;
     }
   }
+  .team-block__persone-text {
+    display: none;
+  }
+  .persone-hover {
+    width: 230px;
+    height: 350px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 5px;
+    background-color: rgb(251, 251, 251);
+    box-shadow: 0 10px 30px 2px rgba(0, 0, 0, 0.538);
+    position: relative;
+    transition: 0.35s;
+    .team-block__img {
+      float: left;
+      transition: 0.35s;
+      img {
+        transition: 0.35s;
+        width: 50px;
+      }
+    }
+    .team-block__name {
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+      padding-left: 10px;
+      font-size: 140%;
+    }
+    .team-block__persone-text {
+      display: block;
+      color: #383838;
+      font-family: $Roboto;
+      line-height: 150%;
+      font-size: 16px;
+      margin-top: 30px;
+    }
+    .team-block__social-media {
+      position: absolute;
+      bottom: 15px;
+      width: 100%;
+      margin-left: -10px;
+    }
+  }
 
   &__img {
     text-align: center;
     img {
+      transition: 0.2s;
       filter: grayscale(100%);
+      width: 170px;
     }
   }
 
@@ -461,6 +511,9 @@ $Merriweather: "Merriweather";
     display: flex;
     justify-content: center;
     gap: 14px;
+    img {
+      cursor: pointer;
+    }
   }
 }
 .provide-block {
@@ -667,13 +720,15 @@ $Merriweather: "Merriweather";
     width: 100%;
     height: 100%;
     clip-path: polygon(65% 0, 200% 0, 200% 200%, 0 200%, 0 65%);
-    background-color: rgb(46, 46, 46);
+    // background-color: rgb(46, 46, 46);
+    background-image: url("../img/city-back.jpg");
+    background-size: cover;
+    background-position: bottom;
     position: relative;
     top: 0;
     right: 0;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding-bottom: 50px;
   }
   &__close {
     width: 100%;
@@ -704,12 +759,18 @@ $Merriweather: "Merriweather";
     z-index: 5;
   }
   .container {
+    padding-bottom: 50px;
     padding-top: 120px;
     padding-right: 50px;
     float: right;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    background: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(112, 76, 76, 0.8) 100%
+    );
   }
   .title {
     color: #fff;
@@ -730,16 +791,31 @@ $Merriweather: "Merriweather";
     width: 100%;
     height: auto;
     min-height: 50px;
-    // background-color: red;
     border-radius: 5px;
     margin-top: 15px;
-    border: 2px solid #999;
-    background-color: #777;
+    background: linear-gradient(
+      90deg,
+      rgb(163, 255, 151) 0%,
+      rgb(252, 160, 228) 100%
+    );
     display: flex;
     justify-content: center;
     flex-direction: column;
     padding-left: 15px;
     padding-right: 15px;
+    position: relative;
+    z-index: 1;
+    &::before {
+      content: "";
+      background-color: rgb(219, 218, 218);
+      position: absolute;
+      width: 99%;
+      height: 90%;
+      left: 0.5%;
+      top: 5%;
+      z-index: -1;
+      border-radius: 5px;
+    }
   }
   &__small-title {
     display: flex;
@@ -747,7 +823,7 @@ $Merriweather: "Merriweather";
     justify-content: space-between;
     font-family: Montserrat;
     font-size: 20px;
-    color: #fff;
+    color: rgb(89, 88, 88);
     height: 50px;
     ion-icon {
       font-size: 30px;
@@ -795,7 +871,6 @@ $Merriweather: "Merriweather";
       position: relative;
       display: block;
     }
-    // background-color: red;
     padding: 15px;
   }
   .img-title {
