--- a/#source/style.scss
+++ b/#source/style.scss
@@ -682,6 +682,7 @@ $Merriweather: "Merriweather";
     height: 195px;
   }
   &__btn {
+    cursor: pointer;
     width: 100%;
     max-width: 770px;
     height: 52px;
